# skry

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
android-app/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/kotlin/app/skry/: MainActivity.kt
android-app/app/src/main/kotlin/app/skry/capture/: CaptureService.kt  Scaling.kt  ScreenEncoder.kt
android-app/app/src/main/kotlin/app/skry/discovery/: NsdAdvertiser.kt
android-app/app/src/main/kotlin/app/skry/net/: LocalAddress.kt  SkryProtocol.kt
android-app/app/src/main/kotlin/app/skry/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/kotlin/app/skry/update/: UpdateChecker.kt
android-app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/kotlin/app/skry/capture/: ScalingTest.kt
android-app/app/src/test/kotlin/app/skry/net/: SkryProtocolTest.kt
android-app/app/src/test/kotlin/app/skry/update/: UpdateCheckerTest.kt
android-app/gradle/: libs.versions.toml
client/: Cargo.toml  vcpkg.json
client/crates/skry/: Cargo.toml
client/crates/skry-adb/: Cargo.toml
client/crates/skry-adb/src/: adb.rs  error.rs  lib.rs  model.rs  parse.rs  wireless.rs
client/crates/skry-proto/: Cargo.toml
client/crates/skry-proto/src/: codec.rs  control.rs  error.rs  gear.rs  handshake.rs  lib.rs  stream.rs  video.rs  wire.rs
client/crates/skry-video/: Cargo.toml  build.rs
client/crates/skry-video/src/: decoder.rs  lib.rs  renderer.rs
client/crates/skry/src/: main.rs
client/crates/transport-spike/: Cargo.toml
client/crates/transport-spike/src/: main.rs
docs/: architecture.md  build-windows.md  build.md  estado.md  protocol.md  resilience.md  spikes.md
docs/decisions/: 0001-transporte-adb-first.md  0002-captura-surfacecontrol.md  0003-defaults-conservadores.md  0004-build-docker-runtime-host.md  0005-inalambrico-y-local.md  0006-minimo-privilegio.md  0007-build-windows-vcpkg.md  0008-app-android-nativa.md
scripts/: android  dev  install.ps1  install.sh
server/: settings.gradle.kts
server/protocol/: build.gradle.kts
server/protocol/src/main/kotlin/skry/proto/: Enums.kt  Messages.kt  Wire.kt
server/protocol/src/test/kotlin/skry/proto/: WireTest.kt
server/spike/: build-spike.sh
server/spike/src/skry/spike/: DisplayLauncher.java  ScreenPower.java  ShellContext.java  Spike1Main.java  Spike2Main.java  Spike3Main.java  VirtualDisplayFactory.java
