[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Elias Gonzalez"]
repository = "https://github.com/eliasss3990/skry"
rust-version = "1.83"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
