[package]
name = "skry-proto"
version = "0.1.0"
description = "Protocolo de wire de skry: handshake, control y framing de video"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
