[package]
name = "skry-video"
version = "0.1.0"
description = "Decode (FFmpeg) y render (SDL2) del stream de skry, con presentación por pts"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# ffmpeg-next 7.x detecta features por versión y compila contra un rango amplio
# de FFmpeg: Linux usa el del sistema (apt 5.1) y Windows el de vcpkg (7.x), con
# la misma crate.
skry-proto = { path = "../skry-proto" }
ffmpeg-next = "7.1"

# SDL2: en Windows, `bundled` + `static-link` compila SDL desde fuente y lo
# enlaza estático → un único .exe sin DLLs. En el resto, el SDL2 del sistema.
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[target.'cfg(not(windows))'.dependencies]
sdl2 = "0.37"

[lints]
workspace = true
