[package]
name = "skry-video"
version = "0.1.0"
description = "Decode (FFmpeg) y render (SDL2) del stream de skry, con presentación por pts"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
skry-proto = { path = "../skry-proto" }

# ffmpeg-next 7.x detecta features por versión y compila contra un rango amplio
# de FFmpeg. En Windows usa el de vcpkg con `static` (un solo .exe; el feature
# hace que ffmpeg-sys busque el triplet estático, no el dinámico). En el resto,
# el FFmpeg dinámico del sistema (apt).
# SDL2: en Windows `bundled` + `static-link` (SDL desde fuente, estático). En el
# resto, el SDL2 del sistema.
[target.'cfg(windows)'.dependencies]
ffmpeg-next = { version = "7.1", features = ["static"] }
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[target.'cfg(not(windows))'.dependencies]
ffmpeg-next = "7.1"
sdl2 = "0.37"

[lints]
workspace = true
