[package]
name = "skry-video"
version = "0.1.0"
description = "Decode (FFmpeg) y render (SDL2) del stream de skry, con presentación por pts"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
skry-proto = { path = "../skry-proto" }

# ffmpeg-next 8.x compila contra un rango amplio de FFmpeg (4→8) detectando
# features por versión: Windows usa el de vcpkg (FFmpeg 8) y Linux el del sistema
# (apt 5.1), con la misma crate. La 8.x además ya no incluye el header removido
# `avfft.h` (lo cual rompía con FFmpeg 8). En Windows va con `static` (un solo
# .exe; el feature hace que ffmpeg-sys busque el triplet estático, no el dinámico).
# SDL2: en Windows `bundled` + `static-link` (SDL desde fuente, estático). En el
# resto, el SDL2 del sistema.
[target.'cfg(windows)'.dependencies]
ffmpeg-next = { version = "8.1", features = ["static"] }
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[target.'cfg(not(windows))'.dependencies]
ffmpeg-next = "8.1"
sdl2 = "0.37"

[lints]
workspace = true
